# premortem-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
deploy/alibaba-fc/: Dockerfile  README.md  s.yaml
docs/: ALIBABA-PROOF.md  ARCHITECTURE.md  BLOG-POST.md  DEMO-SCRIPT.md  DEPLOY-ALIBABA.md  live-vl-evidence.md  mcp-client-transcript.txt
scripts/: mcp_client_demo.py  run_demo.py
src/premortem/: __init__.py  agent.py  api.py  catastrophe_registry.py  config.py  mcp_server.py  policy.py  premortem.py  reversibility.py  scenarios.py  types.py
src/premortem/data/: catastrophe_registry.json  demo_data.py
src/premortem/data/vision_fixtures/: invoice_INV-2026-0451_clean.png.json  invoice_INV-2026-0451_tampered.png.json  make_demo_images.py
src/premortem/llm/: __init__.py  base.py  dashscope_adapter.py  mock_adapter.py
src/premortem/memory/: __init__.py  failure_memory.py
src/premortem/perception/: __init__.py  vision.py
src/premortem/probes/: __init__.py  base.py  registry.py
tests/: conftest.py  test_api.py  test_failure_memory.py  test_mcp_server.py  test_policy.py  test_premortem.py  test_probes.py  test_reversibility.py  test_scenarios.py  test_self_consistency.py  test_vision_live.py
tests/fixtures/: make_invoice_fixture.py
web/: index.html
