[project]
name = "premortem-agent"
version = "0.1.0"
description = "PreMortem — an Accounts-Payable autopilot that tries to prove its own plan wrong before it pays. Built on Qwen Cloud (DashScope)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Real Qwen Cloud execution. Not required for tests/demo (mock adapter is creds-free).
dashscope = ["dashscope>=1.20", "openai>=1.30"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the catastrophe registry and the offline vision fixtures inside built wheels, not just
# editable installs — the mock vision reads data/vision_fixtures/*.json at runtime.
premortem = ["data/*.json", "data/vision_fixtures/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
